--- a/docs/admin/15.command_line.mdx
+++ b/docs/admin/15.command_line.mdx
@@ -114,7 +114,7 @@ yunohost user ssh list-keys <username>
 
 ## Security and SSH
 
-A more extensive discussion about security & SSH can be found on the [dedicated page](/admin/tutorials/security).
+A more extensive discussion about security & SSH can be found on the [dedicated page](/admin/security).
 
 ## The command line
 
