--- a/docs/admin/05.get_started/20.install_on/on_top_of_debian.mdx
+++ b/docs/admin/05.get_started/20.install_on/on_top_of_debian.mdx
@@ -11,15 +11,11 @@ sidebar_class_name: hidden
 import InstallScript from "./_install_script.mdx";
 import InitialConfiguration from "./_configuration.mdx";
 
-YunoHost is easily installable on Debian !
-
-This can be useful if you already have a Debian machine or can't use the recommended methods. 
+YunoHost can be installed "on top" of Debian. This can be useful if you already have a Debian machine or can't use the recommended methods. Note that there is no actual difference in your resulting YunoHost installation between doing this and using the other methods involving pre-installed images: the pre-installed images are just convenient to skip a bunch of steps and having the system already shipped with everything needed.
 
 ## <FAIcon icon="fa-download" /> Get Debian
 
-You should download the version **Bookworm** (Debian 12) and select the architecture for your PC.
-
-When in doubt, select `amd64`, or `i386` for a pre-2010 PC.
+You should download the version **Bookworm** (Debian 12) and select the architecture for your PC. When in doubt, select `amd64`, or `i386` for a pre-2010 PC.
 
 <div class="text--center">
   <Button url="https://www.debian.org/distrib/netinst" color="skyblue"><SmallInline url="/img/icons/logo-debian.png" alt="Debian logo"/> Debian Download page</Button>
@@ -27,13 +23,11 @@ When in doubt, select `amd64`, or `i386` for a pre-2010 PC.
 
 Alternatively, you can browse the [Debian archive](https://cdimage.debian.org/mirror/cdimage/archive) for the latest 12.x version, select your architecture, the select `iso-cd` and download the `netinst` iso.
 
-<!-- <YunoHostImagesList hardware="arm"/> -->
-
 #### Installation
 
 You might want to **wipe the hard drive** before starting the Debian installer.
 
-Burn the iso to your USB key, for example using [Etcher](https://www.balena.io/etcher/).
+Flash the ISO your USB key, for example using [Etcher](https://www.balena.io/etcher/), [USBimager](https://bztsrc.gitlab.io/usbimager/) or `dd`.
 
 Debian installer will ask for a **hostname** and a **domain name**. You can use `yunohost` and `yunohost.local`. It is not that important since the YunoHost Installer will overwrite those anyway.
 
