Broken link suddently for some reason zz

--- a/docs/admin/05.get_started/20.install_on/virtualbox.mdx
+++ b/docs/admin/05.get_started/20.install_on/virtualbox.mdx
@@ -133,7 +133,7 @@ Keep in mind that:
 </Tabs>
 
 :::tip
-If the YunoHost installer fails and you can't solve the issue, know that it's also possible to install Debian and then install YunoHost on top. See [these instructions](/admin/get_started/install_on/on_top_of_debian#-run-the-install-script).
+If the YunoHost installer fails and you can't solve the issue, know that it's also possible to install Debian and then install YunoHost on top. See [these instructions](/admin/get_started/install_on/on_top_of_debian).
 :::
 
 <InitialConfiguration />
