--- a/docs/admin/05.get_started/20.install_on/regular_computer.mdx
+++ b/docs/admin/05.get_started/20.install_on/regular_computer.mdx
@@ -166,7 +166,7 @@ Keep in mind that:
 </Tabs>
 
 :::info
-If the YunoHost installer fails and you can't solve the issue, know that it's also possible to install Debian and then install YunoHost on top. See [the specific instructions](/admin/get_started/install_on/on_top_of_debian#-run-the-install-script).
+If the YunoHost installer fails and you can't solve the issue, know that it's also possible to install Debian and then install YunoHost on top. See [the specific instructions](/admin/get_started/install_on/on_top_of_debian).
 :::
 
 <InitialConfiguration />
