Misc structure, title levels

--- a/docs/admin/05.get_started/20.install_on/_install_script.mdx
+++ b/docs/admin/05.get_started/20.install_on/_install_script.mdx
@@ -9,15 +9,15 @@
 curl https://install.yunohost.org | bash
 ```
 
+:::danger
+Always make sure there's an `s` at the end of `https`.
+:::
+
 :::warning
 You might need to first install `curl` and `ca-certificates` by running:
 ```bash
 apt install curl ca-certificates
 ```
-:::
-
-:::danger
-Always ensure there's an `s` at the end of `https`.
 :::
 
 :::note
