--- a/docs/admin/05.get_started/20.install_on/on_top_of_debian.mdx
+++ b/docs/admin/05.get_started/20.install_on/on_top_of_debian.mdx
@@ -23,7 +23,7 @@ You should download the version **Bookworm** (Debian 12) and select the architec
 
 Alternatively, you can browse the [Debian archive](https://cdimage.debian.org/mirror/cdimage/archive) for the latest 12.x version, select your architecture, the select `iso-cd` and download the `netinst` iso.
 
-#### Installation
+### Installation
 
 You might want to **wipe the hard drive** before starting the Debian installer.
 
@@ -49,7 +49,7 @@ The installer will ask which **desktop environment** you want. This is generally
 - Unselect all desktop environment
 - Keep “standard system utilities” checked
 
-#### After installing Debian
+### After installing Debian
 
 1. Remove the installation media (unplug the USB stick)
 2. Reboot
