Add Portunity as German VPN provider

--- a/docs/admin/05.get_started/10.providers/15.vpn/index.mdx
+++ b/docs/admin/05.get_started/10.providers/15.vpn/index.mdx
@@ -67,3 +67,5 @@ If you try an other VPN provider that include **public dedicated ipv4 and port f
 | VPN provider | [VPNClient](https://github.com/labriqueinternet/vpnclient_ynh) compatibility | IPv6 | rDNS IPv4 | rDNS IPv6 | Price | Membership | Net Neutrality |
 | ------------ | ---------------------------------------------------------------------------- | ---- | --------- | --------- | ----- | ---------- | -------------- |
 | [In-Berlin](https://in-vpn.de/provider/vpn.html)    | ✔ (manuelle)                          | ✔    | ✔         | ✔         | 9 or 14€ / month | 20€ / an | <HighlightNonProfit/> |
+| [Portunity](https://www.portunity.de/access/produkte/vpn-loesungen/vpn-tunnel.html) | ✔ (manuelle) | ✔    | ✔         | ✔         | from 6,80€ / month |   |   |	
+| [FesteIP-Kit (Portunity)](https://www.festeip-kit.de/)  |  ✘ (managed ready-to-use router utilizing a Raspberry Pi) | ✔    | ✔         | ✔         | from 10,80€ / month |   |   |
