--- a/docs/admin/40.backups/index.mdx
+++ b/docs/admin/40.backups/index.mdx
@@ -22,7 +22,7 @@ The current default method consists in creating a `.tar` archive containing all 
 
 You can easily create backup archives from the webadmin by going to `Backups > Local storage` and clicking on `New backup`. You will then be asked to select which configuration, data and apps you want to backup.
 
-![picture of YunoHost's backup pannel](/img/webadmin/backup.png)
+![Screenshot of YunoHost's backup panel](/img/webadmin/backup.png)
 
 </TabItem>
 <TabItem value="cli" label="From the command line">
@@ -137,7 +137,7 @@ SPOILER: The larger your data volume and the more applications you have, the mor
 
 Go in `Backup > Local storage` and select your archive. You can then select which items you want to restore, then click on 'Restore'.
 
-![picture of YunoHost's restore pannel](/img/webadmin/restore.png)
+![Screenshot of YunoHost's restore panel](/img/webadmin/restore.png)
 
 </TabItem>
 <TabItem value="cli" label="From the command line">
