i18n: fix duplicate 'che' value for tabs because of typo in translation

--- a/i18n/docs/admin/05.get_started__10.providers__10.isp/fr.po
+++ b/i18n/docs/admin/05.get_started__10.providers__10.isp/fr.po
@@ -325,7 +325,7 @@ msgstr ""
 #: docs/admin/05.get_started/10.providers/10.isp.mdx:162
 #, no-wrap
 msgid "<TabItem value=\"gbr\" label=\"UK\">\n"
-msgstr "<TabItem value=\"che\" label=\"Royaume-Uni\">\n"
+msgstr "<TabItem value=\"gbr\" label=\"Royaume-Uni\">\n"
 
 #. type: Plain text
 #: docs/admin/05.get_started/10.providers/10.isp.mdx:169
