admin: Replace typographic quotes with basic quotes

--- a/docs/admin/05.get_started/20.install_on/on_top_of_debian.mdx
+++ b/docs/admin/05.get_started/20.install_on/on_top_of_debian.mdx
@@ -40,14 +40,15 @@ The installer will also ask for a **user account** and another password.
 
 When the install asks where to install and how to **create disk partitions**, select the option to **use the whole disk**, unless you know what you're doing.
 
-- We recommend not to separate the `/home`, `/var` or `/tmp` partitions. Use the option to “keep all files in one partition”.
+- We recommend not to separate the `/home`, `/var` or `/tmp` partitions. Use the option to "keep all files in one partition".
 - If you don't know what you're doing, don't encrypt the disk (Decryption at power-on will be an issue)
 
 The installer will ask about **mirrors**. Select a country and server close to your location, or use the default options.
 
 The installer will ask which **desktop environment** you want. This is generally useless and might waste resources.
+
 - Unselect all desktop environment
-- Keep “standard system utilities” checked
+- Keep "standard system utilities" checked
 
 ### After installing Debian
 
