--- a/docs/dev/10.doc.mdx
+++ b/docs/dev/10.doc.mdx
@@ -51,7 +51,7 @@ export PATH="$NODE_BIN_PATH:$PATH"
 # Then inside your "doc" clone, install the dependencies with:
 
 ```
-npm install
+npm ci
 ```
 
 Then:
@@ -79,4 +79,4 @@ npm run serve
 
 Some pages of the documentation are automatically or dynamically generated. Please do not try to edit them manually...
 
-See the [generation script](https://github.com/YunoHost/doc/blob/docusaurus/scripts/generate_docs.sh).
+See the [generation script](https://github.com/YunoHost/doc/blob/main/scripts/generate_docs.sh).
